# Python-for-Data-Science

./: .gitignore  eksikler.txt  readme.txt
Array/ex00/: give_bmi.py
Array/ex01/: array2D.py  tester.py
Array/ex02/: load_image.py  tester.py
Array/ex03/: load_image.py  zoom.py
Array/ex04/: rotate.py
Array/ex05/: pimp_image.py  tester.py
DOD/ex00/: a.py  statistics.py  tester.py
DOD/ex01/: in_out.py  tester.py
DOD/ex02/: callLimit.py
DOD/ex03/: new_student.py  tester.py
DataTable/ex01/: aff_life.py
DataTable/ex02/: aff_pop.py  load_csv.py
DataTable/ex03/: load_csv.py  projection_life.py
OOP/ex00/: S1E9.py
OOP/ex01/: S1E7.py  tester.py
OOP/ex02/: DiamondTrap.py  S1E7.py  S1E9.py
OOP/ex03/: ft_calculator.py  tester.py
OOP/ex04/: ft_calculator.py
Python - 0 - Starting/: req.txt
Python - 0 - Starting/ex01/: format_ft_time.py
Python - 0 - Starting/ex03/: NULL_not_found.py
Python - 0 - Starting/ex04/: whatis.py
Python - 0 - Starting/ex05/: building.py
Python - 0 - Starting/ex06/: filterstring.py  ft_filter.py
Python - 0 - Starting/ex08/: Loading.py
Python - 0 - Starting/ex09/: README.md  ft_package.py  pyproject.toml
Python - 0 - Starting/ex09/ft_package.egg-info/: PKG-INFO
Python - 1 - Array/ex00/: give_bmi.py
Python - 1 - Array/ex01/: array2D.py
Starting/ex00/: Hello.py
ex00/: Hello.py
ex01/: format_ft_time.py
ex02/: find_ft_type.py
ex03/: NULL_not_found.py  tester.py
ex04/: whatis.py
ex05/: building.py
ex06/: filterstring.py
ex07/: sos.py
ex08/: Loading.py  tester.py
ex09/: pyproject.toml
(+17 files in other folders)
