[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "1.0.0"
description = "Muraler's ft_package"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "muraler"},
    {email = "muraler@student.42kocaeli.com.tr"},
]
keywords = ["count_in_list", "ft_package"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/mustafaUrl/Python-for-Data-Science"



[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = {where=["src"]}
