[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
readme = "README.md"
authors = [
    {name = "stunca"}, 
    {email = "stunca@student.42kocaeli.com.tr"}]
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/bakwein/ft_package"